# ecosystem-state-forecaster

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
docs/: australia_outline.json  biome_results.csv  biome_results_landsat_100m.csv  biome_results_sentinel2_100m.csv  biome_results_sentinel2_100m_resolution.csv  biome_results_sentinel2_10m_resolution.csv  real_results.csv
docs/app_data/: landsat_100m_alice_springs.nc  landsat_100m_daintree.nc  landsat_100m_kosciuszko.nc  landsat_100m_sunshine_coast_hinterland.nc  sentinel2_100m_alice_springs.nc  sentinel2_100m_daintree.nc  sentinel2_100m_kosciuszko.nc  sentinel2_100m_sunshine_coast_hinterland.nc
ecoforecast/: __init__.py  app_data.py  baselines.py  config.yaml  data.py  drivers.py  ensemble.py  evaluate.py  features.py  uncertainty.py  viz.py
ecoforecast/models/: __init__.py  convlstm.py  gbt.py  gnn.py
notebooks/: 01_explore_dea_s2.ipynb
scripts/: build_cube.py  build_drivers.py  demo_baselines.py  demo_convlstm.py  demo_evaluate.py  demo_gbt.py  demo_gnn.py  demo_uncertainty.py  make_readme_figures.py  run_pipeline.py
tests/: test_app_data.py  test_convlstm.py  test_ensemble.py  test_evaluate.py  test_features_baselines.py  test_gbt.py  test_gnn.py  test_smoke.py  test_uncertainty.py
