[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ecoforecast"
version = "0.1.0"
description = "Forecasting near-future vegetation state across Australian biomes."
requires-python = ">=3.11"
# Runtime dependencies are tracked (pinned) in requirements.txt for now.
dependencies = []

[tool.setuptools.packages.find]
include = ["ecoforecast*"]
